objects/Field_Inventory_Item__c.object
<CustomObject>
    <label>Field Inventory Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INST</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MatNum__c</fullName>
        <label>Material Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeItem__c</fullName>
        <formula>(today()- Date_Received__c )/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (mo)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Field_Inventory__c</referenceTo>
        <relationshipLabel>Field Inventory Items</relationshipLabel>
        <relationshipName>Field_Inventory_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_No__c</fullName>
        <label>Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGOR_Class__c</fullName>
        <label>IGOR Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Major Accessory</fullName>
                </value>
                <value>
                    <fullName>Minor Accessory</fullName>
                </value>
                <value>
                    <fullName>Consumable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <formula>if(ISPICKVAL( Type__c , &quot;INST&quot;), if( AgeItem__c  &lt; 6, List_price__c ,
if(AgeItem__c &lt;19, round((List_price__c * (1-(AgeItem__c *1.9/100))),0),
if(AgeItem__c &lt;25, round((List_price__c * (1-(AgeItem__c *2.4/100))),0),
round((List_price__c *0.4),0)))), if(AgeItem__c &lt; 4, List_price__c, IF(AgeItem__c &lt; 7, List_price__c * 0.75,List_price__c*0.5) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <label>Asset Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Contacts</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Field Inventory Items</relationshipLabel>
        <relationshipName>Field_Inventory_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-AA</fullName>
                </value>
                <value>
                    <fullName>02-ICP</fullName>
                </value>
                <value>
                    <fullName>03-MAS</fullName>
                </value>
                <value>
                    <fullName>04-GC</fullName>
                </value>
                <value>
                    <fullName>05-TEA</fullName>
                </value>
                <value>
                    <fullName>06-HTS</fullName>
                </value>
                <value>
                    <fullName>07-CSA</fullName>
                </value>
                <value>
                    <fullName>08-MLD</fullName>
                </value>
                <value>
                    <fullName>09-RRD</fullName>
                </value>
                <value>
                    <fullName>10-RRS</fullName>
                </value>
                <value>
                    <fullName>11-AWS</fullName>
                </value>
                <value>
                    <fullName>12-SPS</fullName>
                </value>
                <value>
                    <fullName>15-LVI</fullName>
                </value>
                <value>
                    <fullName>13-APS</fullName>
                </value>
                <value>
                    <fullName>14-ANP</fullName>
                </value>
                <value>
                    <fullName>16-FGP</fullName>
                </value>
                <value>
                    <fullName>17-IR</fullName>
                </value>
                <value>
                    <fullName>18-UVS</fullName>
                </value>
                <value>
                    <fullName>19-LC</fullName>
                </value>
                <value>
                    <fullName>20-ESS</fullName>
                </value>
                <value>
                    <fullName>21-NEO</fullName>
                </value>
                <value>
                    <fullName>22-PRE</fullName>
                </value>
                <value>
                    <fullName>23-DIA</fullName>
                </value>
                <value>
                    <fullName>24-SYN</fullName>
                </value>
                <value>
                    <fullName>25-RS</fullName>
                </value>
                <value>
                    <fullName>26-ISCO</fullName>
                </value>
                <value>
                    <fullName>27-UIC</fullName>
                </value>
                <value>
                    <fullName>28-RADO</fullName>
                </value>
                <value>
                    <fullName>29-DIS</fullName>
                </value>
                <value>
                    <fullName>32-HCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <formula>Quantity__c * UnitCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integrated_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrated Item</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>